...
        )
    }
}

internal const val QUESTIONNAIRE_ROOT_TAG: String = "owl_q_root"
internal const val QUESTIONNAIRE_CANCEL_TAG: String = "owl_q_cancel"
internal const val QUESTIONNAIRE_BACK_TAG: String = "owl_q_back"
internal const val QUESTIONNAIRE_NEXT_TAG: String = "owl_q_next"
internal const val QUESTIONNAIRE_SUBMIT_TAG: String = "owl_q_submit"
internal const val QUESTIONNAIRE_PROGRESS_TAG: String = "owl_q_progress"
internal const val QUESTIONNAIRE_ERROR_DIALOG_TAG: String = "owl_q_error_dialog"
internal const val QUESTIONNAIRE_DISMISS_DIALOG_TAG: String = "owl_q_dismiss_dialog"

