...
                    .height(4.dp),
            ) {}
        }
    }
}

internal const val QUESTIONNAIRE_CONSENT_TAG: String = "owl_q_consent"
internal const val QUESTIONNAIRE_CONSENT_ACCEPT_TAG: String = "owl_q_consent_accept"
internal const val QUESTIONNAIRE_CONSENT_LATER_TAG: String = "owl_q_consent_later"
internal const val QUESTIONNAIRE_CONSENT_NEVER_TAG: String = "owl_q_consent_never"
internal const val QUESTIONNAIRE_SUCCESS_TAG: String = "owl_q_success"
internal const val QUESTIONNAIRE_DONE_TAG: String = "owl_q_done"

